Relocate test directory

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.github.jmazzitelli</groupId>
   <artifactId>prometheus-scraper</artifactId>
-  <version>1.0.0.Final</version>
+  <version>1.0.0</version>
 
   <name>Prometheus Scraper</name>
   <description>Java API that scrapes metrics from a Prometheus protocol endpoint.</description>
